changed some things to make it work on server